--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "main": "index.js",
   "author": "Omar Kassem <omarksm09@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^24.0.0",
+    "jest": "^30.0.0",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
